src/style.css
:root {
   --global-bg-dark: #666;
   --global-bg: #aaa;
   --button-bg: #fff;
   --button-bg-hover: #e8e8e8;
   --button-bg-pressed: #ddd;
   --button-bg-pressed-hover: #eee;

   --rule-none: rgba(255, 255, 128, 0.5);
   --rule-exclude: rgba(255, 128, 128, 0.5);
   --rule-include: rgba(96, 223, 96, 0.5);

   --rule-none-idle: rgba(255, 255, 128, 0.25);
   --rule-exclude-idle: rgba(255, 128, 128, 0.25);
   --rule-include-idle: rgba(96, 223, 96, 0.25);

   --facetag-north: rgba(255, 255, 128, 0.5);
   --facetag-south: rgba(128, 128, 255, 0.5);
   --facetag-west: rgba(128, 255, 255, 0.5);
   --facetag-east: rgba(255, 128, 128, 0.5);
   --facetag-down: rgba(255, 128, 255, 0.5);
   --facetag-up: rgba(96, 223, 96, 0.5);;

   --padding-1: 1vh;
   --padding-2: 2vh;
   --padding-4: 4vh;

   --button-height: 4vh;
   --header-height: 7.5vh;
}

html, body {
   margin: 0;
   height: 100%;
}

@font-face {
   font-family: "AzaFont";
   src: url("/Aza_font.woff");
}

h1 {
   display: flex;
   margin: 0;
   font-family:  AzaFont;
   font-size: larger;
   color: var(--global-bg-dark);
   justify-content: space-between;
   align-items: center;
   padding-left: var(--padding-2);
   height: var(--header-height);
}

h1 > a {
   margin: 0;
   border-left: #777 solid 1px;
   text-decoration: none;
   color: var(--global-bg-dark);
   background-color: var(--button-bg-pressed);
   height: 100%;
   align-content: center;
   padding: 0 var(--padding-2);
}

h1 > a:hover {
   color: black;
   background-color: var(--button-bg-hover);
}

main {
   display: flex;
   flex-direction: row;
   height: calc(100% - var(--header-height));
}

#viewport {
   display: inline-block;
   width: 75vw;
   height: 100%;
}

#controls {
   width: 25vw;
   height: 100%;
   display: flex;
   flex-direction: column;
   background-color: var(--global-bg);
}

#controls > form {
   display: flex;
   flex-direction: column;
   padding: var(--padding-1) var(--padding-1) 0px var(--padding-1);
}

#controls > form > input {
   margin-bottom: var(--padding-1);
}

.json-field {
   background-color: var(--button-bg);
   display: flex;
   align-items: center;
   flex-direction: row;
}

.json-input {
   height: 100%;
   flex:1;
   border-right: var(--global-bg) solid 1px;
}

.json-input::file-selector-button {
   height: 100%;
   width: 25%;
   border-radius: 0;
   border: none;
   cursor: pointer;
   border-right: var(--global-bg) var(--padding-1) solid;
   padding: var(--padding-1);
   background-color: var(--button-bg);
   margin-right: var(--padding-1);
   border-right: var(--global-bg) solid 1px;
}

.json-reload-button
{
   width: var(--button-height);
   height: 100%;
   border-radius: 0;
   border: none;
   background-color: var(--button-bg);
   font-size: large;
   cursor: pointer;
   padding: 0;
}

.field {
   height: var(--button-height);
   background-color: var(--button-bg);
   margin-bottom: var(--padding-1);
}

.field:last-child {
   margin-bottom: 0;
}

.select-field {
   display: flex;  
   align-items: center;
   justify-content: space-between;
}

.select-field-input {
   height: 100%;
   width: 100%;
   border-radius: 0;
   border: none;
   cursor: pointer;
   padding: var(--padding-1);
   flex-grow: 1;
   border-left: var(--global-bg) solid 1px;
   background-color: var(--button-bg);
}

.select-field-title {
   height: 100%;
   width: 100%;
   padding-left: var(--padding-1);
   align-content: center;
}

.field-container > summary:hover,
.pattern-str:hover,
.json-reload-button:hover,
.select-field-input:hover,
.number-field > div > button:hover ,
.json-input::file-selector-button:hover,
.number-field > div > input[type="number"]:hover,
.checkbox-field > input[type="checkbox"]:hover ~ .checkbox-faker
{
   background-color: var(--button-bg-hover);
}

.field-container > summary:active,
.json-reload-button:active,
.select-field-input:active,
.number-field > div > button:active,
.json-input::file-selector-button:active,
.checkbox-field > input[type="checkbox"]:checked ~ .checkbox-faker,
.checkbox-field > input[type="checkbox"]:active ~ .checkbox-faker 
{
   background-color: var(--button-bg-pressed);
}

.json-reload-button:active:hover,
.select-field-input:active:hover,
.number-field > div > button:active:hover
.json-input::file-selector-button:active:hover,
.checkbox-field > input[type="checkbox"]:checked:hover ~ .checkbox-faker 
{
   background-color: var(--button-bg-pressed-hover);
}

#json_display {
   height: 100%;
   overflow-y: scroll;
   margin: var(--padding-1);
   padding: var(--padding-1);
   white-space: pre-wrap;
   background-color: var(--button-bg);
   font-family: "Noto Sans Mono", monospace;
   font-optical-sizing: auto;
   font-size: small;
   font-weight: 400;
   font-style: normal;
   font-variation-settings:
     "wdth" 62.5;
}

#json_display_title {
   margin: 0;
   margin-top: var(--padding-2);
   padding-left: var(--padding-1);
   padding-right: var(--padding-1);
   padding-top: var(--padding-1);
   border-top: #777 solid 2px;
}

.checkbox-field {
   display: block;
   position: relative;
   cursor: pointer;
   overflow-x: hidden;
}

.checkbox-field > input[type="checkbox"] {
   position: absolute;
   cursor: pointer;
   opacity: 0;
   height: 100%;
   width: 100%;
   margin: 0;
}

.checkbox-faker {
   display: block;
   height: 100%;
   width: 100%;
   background-color: var(--button-bg);
   align-content: center;
}

.number-field {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
   align-items: center;
}

.number-field > div {
   display: flex;
   justify-content: stretch;
   height: 100%;
   width: 50%;
}

.number-field > label {
   flex-grow: 1;
   padding-left: var(--padding-1);
}

.number-field > div > button {
   min-width: var(--button-height);
   border-radius: 0;
   border: none;
   cursor: pointer;
   background-color: var(--button-bg);
   border-left: var(--global-bg) solid 1px;
}

.number-field > div > input[type="number"] {
   padding: var(--padding-1);
   border-radius: 0;
   width: 100%;
   border: none;
   cursor: pointer;
   border-left: var(--global-bg) solid 1px;
   -moz-appearance: textfield;
}

.number-field > div > input[type="number"]:focus-visible {
   outline: none;
   background-color: var(--button-bg-pressed);
}

.number-field > div > input[type=number]::-webkit-inner-spin-button,
.number-field > div > input[type=number]::-webkit-outer-spin-button
{
   -webkit-appearance: none;
   margin: 0;
}

.pattern-str.active,
.pattern-str 
{
   display: block;
   margin: 0;
   background-color: var(--button-bg);
   border: var(--button-bg-pressed) solid 1px;
   margin-bottom: var(--padding-1);
   font-style: normal;
   cursor: pointer;
}

.pattern-str.active {
   background-color: var(--button-bg-pressed);
   border: var(--button-bg-pressed) solid 1px;
}

.pattern-str.active:hover {
   background-color: var(--button-bg-pressed-hover);
   border: var(--button-bg-pressed-hover) solid 1px;
}

.rule-str,
.rule-disabled-str,
.rule-include-str,
.rule-exclude-str
{
   display: block;
   margin: 0;
   margin-bottom: var(--padding-1);
   font-style: normal;
}

.rule-str {
   background-color: var(--rule-none-idle);
}

.rule-include-str {
   background-color: var(--rule-include-idle);
}

.rule-exclude-str {
   background-color: var(--rule-exclude-idle);
}

.pattern-str.active > .rule-str {
   background-color: var(--rule-none);
}

.pattern-str.active > .rule-include-str {
   background-color: var(--rule-include);
}

.pattern-str.active > .rule-exclude-str {
   background-color: var(--rule-exclude);
}

.pattern-str.active:hover > .rule-str {
   background-color: var(--rule-none-idle);
}

.pattern-str.active:hover > .rule-include-str {
   background-color: var(--rule-include-idle);
}

.pattern-str.active:hover > .rule-exclude-str {
   background-color: var(--rule-exclude-idle);
}

[class*="face-tag-"] {
   display: block;
   font-style: normal;
}

.face-tag-north {
   background-color: var(--facetag-north);
}
.face-tag-south {
   background-color: var(--facetag-south);
}
.face-tag-west {
   background-color: var(--facetag-west);
}
.face-tag-east {
   background-color: var(--facetag-east);
}
.face-tag-down {
   background-color: var(--facetag-down);
}
.face-tag-up {
   background-color: var(--facetag-up);
}

.field-container > details ~ div {
   background-color: var(--global-bg);
   padding-top: 0;
   padding-left: var(--padding-1);
   padding-right: var(--padding-1);
   padding-bottom: 0;
   transition: max-height 125ms ease-in-out, padding-top 125ms ease-in-out, padding-bottom 125ms ease-in-out;
   max-height: 0;
   overflow: hidden;
   border: var(--button-bg) 2px solid;
   border-bottom: none;
   border-top: none;
}

.field-container > details[open=""] ~ div {
   padding-top: var(--padding-1);
   padding-bottom: var(--padding-1);
   max-height: calc(calc(var(--button-height) * 4) + calc(var(--padding-1) * 4));
   border-bottom: var(--button-bg) 2px solid;
}

.field-container > details > summary {
   align-content: center;
   display: block;
   cursor: pointer;
   margin-bottom: 0;
}

.field .icon {
   width: var(--button-height);
   height: var(--button-height);
   font-style: normal;
   font-size: larger;
   align-items: center;
   --fa-display: inline-flex;
   justify-content: center;
   border-right: var(--global-bg) solid 1px;
   margin-right: var(--padding-1);
}

